--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
